# slint-tetris

./: Cargo.toml  README.md  index.html
pkg/: .gitignore  lib_tetris_slint.js  lib_tetris_slint_bg.wasm  tetris_slint.js  tetris_slint_bg.wasm
src/: game.rs  main.rs  pieces.rs  utils.rs
src/controller/: game_controller.rs
ui/: appwindow.slint  theme.slint
