[package]
name = "tetris-slint"
version = "0.1.0"
authors = ["a903823"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }
web-sys = { version = "0.3", features=["console", "Element", "HtmlCollection"] }
console_error_panic_hook = "0.1.5"

[lib]
name = "lib_tetris_slint"
path = "src/main.rs"
crate-type = ["cdylib"]
